<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reminder.ReminderFragment"
    android:orientation="vertical"
    android:paddingHorizontal="60dp" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logobrain"
                android:layout_marginTop="15dp"
                android:scaleType="fitCenter"
                />

            <TextView
                android:id="@+id/titleReminderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminderName"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <TextView
                android:id="@+id/titleWhen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/when"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0"
                >
                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/monday"
                        android:textSize="20sp"
                        />

                    <CheckBox
                        android:id="@+id/monday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="45dp"
                        />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tuesday"
                        android:textSize="20sp"
                        />

                    <CheckBox
                        android:id="@+id/tuesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="45dp"
                        />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wednesday"
                        android:textSize="20sp"
                        />

                    <CheckBox
                        android:id="@+id/wednesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="45dp"
                        />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/thursday"
                        android:textSize="20sp"
                        />

                    <CheckBox
                        android:id="@+id/thursday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="45dp"
                        />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/friday"
                        android:textSize="20sp"
                        />

                    <CheckBox
                        android:id="@+id/friday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="45dp"
                        />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/saturday"
                        android:textSize="20sp"
                        />

                    <CheckBox
                        android:id="@+id/saturday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="45dp"
                        />
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sunday"
                        android:textSize="20sp"
                        />

                    <CheckBox
                        android:id="@+id/sunday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="45dp"
                        />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/titleTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                />

            <EditText
                android:id="@+id/timeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:hint="@string/time"/>

            <Button
                android:id="@+id/buttonDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/done"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>